--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="fb:admins" content="509248955">
     <meta property="og:description" content="“The Search for No Title” by Alexander Christiaan Jacob, 2012. A monument to a forgotten composition.">
     <meta property="og:image" content="https://thesearchfornotitle.com/icon-256x256.png">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:width" content="512">
     <meta property="og:title" content="The Search for No Title">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://thesearchfornotitle.com/">
@@ -21,12 +23,34 @@
     <link rel="apple-touch-icon-precomposed" href="https://thesearchfornotitle.com/apple-touch-icon-precomposed.png">
     <link rel="author" href="https://alexanderchristiaanjacob.com/" title="Alexander Christiaan Jacob">
     <link rel="canonical" href="https://thesearchfornotitle.com/">
+    <link rel="help" href="https://github.com/acjbizar/thesearchfornotitle.com">
     <link rel="icon" href="https://thesearchfornotitle.com/favicon.png">
     <link rel="manifest" href="https://thesearchfornotitle.com/manifest.json">
     <style>
         *{border:0;margin:0;outline:0;padding:0;text-decoration:none}
         body,canvas,html{display:block;height:100%;overflow:hidden;width:100%}
     </style>
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "VisualArtwork",
+            "name": "The Search for No Title",
+            "image": "https://thesearchfornotitle.com/apple-touch-icon-precomposed.png",
+            "description": "“The Search for No Title” by Alexander Christiaan Jacob, 2012. A monument to a forgotten composition.",
+            "url": "https://thesearchfornotitle.com/",
+            "creator": [
+                {
+                    "@type": "Person",
+                    "name": "Alexander Christiaan Jacob",
+                    "url": "https://alexanderchristiaanjacob.com/",
+                    "sameAs": "https://twitter.com/acj"
+                }
+            ],
+            "artform": "website",
+            "accessModeSufficient": "visual",
+            "interactivityType": "mixed"
+        }
+    </script>
 </head>
 <body>
 <canvas id="content" height="576" role="main" width="576">This website requires <code>html:canvas</code> support.</canvas>
