--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,9 @@
 </head>
 <body>
 <canvas id="content" height="576" role="main" width="576">This website requires <code>html:canvas</code> support.</canvas>
-<noscript>This website requires <i>JavaScript</i> support.</noscript>
+<noscript>
+    <p>This website requires <i>JavaScript</i> support.</p>
+</noscript>
 <script>
 
     "use strict";
